--- a/03_functions/0301lt_funkcijos_aprasymo_struktura.ipynb
+++ b/03_functions/0301lt_funkcijos_aprasymo_struktura.ipynb
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Jonas\n",
+      "Amžius: 25\n"
+     ]
+    }
+   ],
    "source": [
     "def spausdinti_argumentus(vardas, amžius):\n",
     "    \"\"\"Ši funkcija priima du argumentus ir juos spausdina į konsolę.\"\"\"\n",
@@ -85,11 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paskaiciavimai lygu:24\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def apskaiciuotas_plotas(ilgis, plotis):\n",
+    "    rezultatas = ilgis * plotis\n",
+    "    print(f'Paskaiciavimai lygu:{rezultatas}')\n",
+    "    \n",
+    "\n",
+    "apskaiciuotas_plotas(12,2)"
    ]
   },
   {
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skaičius 15 yra Nelyginis.\n"
+     ]
+    }
+   ],
    "source": [
     "# Pavyzdžio panaudojimas\n",
     "ar_lyginis_ar_nelyginis(15)"
@@ -197,11 +228,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skaicius yra nelyginis\n",
+      "skaicius yra lyginis\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def skaiciu_lyginimas(skaicius):\n",
+    "    if skaicius % 2 ==0: \n",
+    "        print('skaicius yra lyginis')\n",
+    "    else:\n",
+    "        print('skaicius yra nelyginis')\n",
+    "\n",
+    "skaiciu_lyginimas(5) \n",
+    "skaiciu_lyginimas(8)       "
    ]
   },
   {
@@ -215,11 +263,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skaicius yra teigiamas\n",
+      "skaicius yra neigiamas\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def teigiamas_ar_neigiamas(skaicius):\n",
+    "    if skaicius >= 0:\n",
+    "        print('skaicius yra teigiamas')\n",
+    "    elif skaicius < 0:\n",
+    "        print('skaicius yra neigiamas')\n",
+    "    else:\n",
+    "        print('sprendimas rastas')\n",
+    "\n",
+    "teigiamas_ar_neigiamas(7) \n",
+    "teigiamas_ar_neigiamas(-5)       \n",
+    "\n"
    ]
   },
   {
@@ -234,11 +302,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "atsakymas ok\n",
+      "atsakymas ok\n",
+      "atsakymas netinkamas\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def skaicio_ryba(skaicius):\n",
+    "    if skaicius <= 15:\n",
+    "        print('atsakymas ok')\n",
+    "    elif skaicius > 15:\n",
+    "        print('atsakymas netinkamas') \n",
+    "\n",
+    "skaicio_ryba(7) \n",
+    "skaicio_ryba(13)  \n",
+    "skaicio_ryba(17)     "
    ]
   }
  ],
@@ -258,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
