Uzduociu atnaujinimas 103-cias

--- a/03_functions/0302en_answers.ipynb
+++ b/03_functions/0302en_answers.ipynb
@@ -52,9 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 0: 1\n",
+      "Factorial of 1: 1\n",
+      "Factorial of 2: 2\n",
+      "Factorial of 3: 6\n",
+      "Factorial of 4: 24\n",
+      "Factorial of 5: 120\n"
+     ]
+    }
+   ],
    "source": [
     "# Function definition\n",
     "def calculate_factorial(n):\n",
@@ -92,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
