--- a/03_functions/0302lt_argumentai_grazinama_reiksme_return.ipynb
+++ b/03_functions/0302lt_argumentai_grazinama_reiksme_return.ipynb
@@ -103,11 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def pakeltas_laipsniu(skaicius,laipsnis):\n",
+    "    rezultatas = skaicius ** laipsnis\n",
+    "    return(rezultatas)\n",
+    "\n",
+    "atsakymas = pakeltas_laipsniu(7, 3)\n",
+    "print(atsakymas)"
    ]
   },
   {
@@ -178,11 +192,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 2, 35, 1.4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def keli_sprendimai(x, y):\n",
+    "    suma = x + y\n",
+    "    atimtis = x - y\n",
+    "    daugyba = x * y\n",
+    "    dalyba = x / y\n",
+    "    return (suma, atimtis, daugyba, dalyba)\n",
+    "\n",
+    "rezultatas = keli_sprendimai(7, 5)\n",
+    "print(rezultatas)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -251,21 +284,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Faktorialas 0: 1\n",
+      "Faktorialas 1: 1\n",
+      "Faktorialas 2: 1\n",
+      "Faktorialas 3: 1\n",
+      "Faktorialas 4: 1\n",
+      "Faktorialas 5: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Funkcijos apibrėžimas\n",
-    "def apskaičiuoti_faktorialą(n):\n",
-    "    pass # Jūsų kodas čia, vietoj pass\n",
+    "# Funkcijos apibrėžimas:\n",
+    "# Jūsų kodas čia, vietoj pass\n",
+    "def apskaiciuoti_faktoriala(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        faktorial = 1\n",
+    "\n",
+    "        for skaicius in range(1, n + 1):    \n",
+    "          faktorial *= skaicius \n",
+    "          return faktorial  \n",
+    "        \n",
+    "rezultatas = apskaiciuoti_faktoriala(0)\n",
+    "print(rezultatas)   \n",
     "\n",
     "# Iškvieskite funkciją ir spausdinkite faktorialus\n",
-    "print(\"Faktorialas 0:\", apskaičiuoti_faktorialą(0))  # Tikimasi rezultatas: 1\n",
-    "print(\"Faktorialas 1:\", apskaičiuoti_faktorialą(1))  # Tikimasi rezultatas: 1\n",
-    "print(\"Faktorialas 2:\", apskaičiuoti_faktorialą(2))  # Tikimasi rezultatas: 2\n",
-    "print(\"Faktorialas 3:\", apskaičiuoti_faktorialą(3))  # Tikimasi rezultatas: 6\n",
-    "print(\"Faktorialas 4:\", apskaičiuoti_faktorialą(4))  # Tikimasi rezultatas: 24\n",
-    "print(\"Faktorialas 5:\", apskaičiuoti_faktorialą(5))  # Tikimasi rezultatas: 120"
+    "print(\"Faktorialas 0:\", apskaiciuoti_faktoriala(0))  # Tikimasi rezultatas: 1\n",
+    "print(\"Faktorialas 1:\", apskaiciuoti_faktoriala(1))  # Tikimasi rezultatas: 1\n",
+    "print(\"Faktorialas 2:\", apskaiciuoti_faktoriala(2))  # Tikimasi rezultatas: 2\n",
+    "print(\"Faktorialas 3:\", apskaiciuoti_faktoriala(3))  # Tikimasi rezultatas: 6\n",
+    "print(\"Faktorialas 4:\", apskaiciuoti_faktoriala(4))  # Tikimasi rezultatas: 24\n",
+    "print(\"Faktorialas 5:\", apskaiciuoti_faktoriala(5))  # Tikimasi rezultatas: 120"
    ]
   }
  ],
@@ -285,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
