--- a/03_functions/0303en_answers.ipynb
+++ b/03_functions/0303en_answers.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shipping cost: 500.00 €.\n",
+      "Shipping cost: 2000.00 €.\n",
+      "Shipping cost: 900.00 €.\n",
+      "Shipping cost: 100.00 €.\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_shipping_cost(distance, weight=1, rate_per_kg=5):\n",
     "    shipping_cost = distance * weight * rate_per_kg\n",
@@ -33,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of adding 2 and 3 is 5.\n",
+      "The result of subtracting 4 from 10 is 6.\n",
+      "The result of multiplying 5 and 7 is 35.\n",
+      "The result of dividing 15 by 3 is 5.0.\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_math(operation, num1, num2):\n",
     "    if operation == \"add\":\n",
@@ -101,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
