--- a/03_functions/0303lt_nebutini_argumentai.ipynb
+++ b/03_functions/0303lt_nebutini_argumentai.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obuolys - kaina su nuolaida ir mokesčiais: 0.95€\n",
+      "Avokadas - kaina su nuolaida ir mokesčiais: 1.32€\n",
+      "Pienas - kaina su nuolaida ir mokesčiais: 2.42€\n"
+     ]
+    }
+   ],
    "source": [
     "skaiciuoti_kaina(\"Obuolys\", 1.00, 10, 5)\n",
     "skaiciuoti_kaina(\"Avokadas\", 1.20, mokestis=10)\n",
@@ -110,11 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shiping_cost:  250.00 €. \n",
+      "shiping_cost:  41250.00 €. \n",
+      "shiping_cost:  250000.00 €. \n",
+      "shiping_cost:  900.00 €. \n",
+      "shiping_cost:  500.00 €. \n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def calculate_shiping_cost(distancija, svoris=1, svoris_uz_kg=5):\n",
+    "    shiping_cost = distancija * svoris * svoris_uz_kg\n",
+    "    print(f'shiping_cost: {shiping_cost: .2f} €. ')\n",
+    "\n",
+    "calculate_shiping_cost(50) \n",
+    "calculate_shiping_cost(55, 150) \n",
+    "calculate_shiping_cost(1000, 1, 250 ) \n",
+    "calculate_shiping_cost(20, 9) \n",
+    "calculate_shiping_cost(100) \n",
+    "\n"
    ]
   },
   {
@@ -130,9 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate(operation, x, y):\n",
     "    if operation == \"add\":\n",
@@ -187,11 +227,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sprendimo rezultatas butu 5 and 7 is 12.\n",
+      "sprendimo rezultatas butu 9 and 2 is 7.\n",
+      "sprendimo rezultatas butu 15 and 5 is 3.0.\n",
+      "sprendimo rezultatas butu 15 and 5 is 3.0\n",
+      "sprendimo rezultatas error\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def calculate_math(sprendimas, num1, num2):\n",
+    "    if sprendimas == 'sudejimas':\n",
+    "        rezultatas = num1 + num2\n",
+    "        print(f'sprendimo rezultatas butu {num1} and {num2} is {rezultatas}.')\n",
+    "    elif sprendimas == 'atimtis':\n",
+    "        rezultatas = num1 - num2\n",
+    "        print(f'sprendimo rezultatas butu {num1} and {num2} is {rezultatas}.')\n",
+    "    elif sprendimas == 'dalyba':\n",
+    "            rezultatas = num1 / num2\n",
+    "            if rezultatas != 0:\n",
+    "             print(f'sprendimo rezultatas butu {num1} and {num2} is {rezultatas}.')\n",
+    "            elif sprendymas == 'daugyba':\n",
+    "             rezultatas = num1 * num2\n",
+    "            print(f'sprendimo rezultatas butu {num1} and {num2} is {rezultatas}')\n",
+    "    else:\n",
+    "            print('sprendimo rezultatas error')\n",
+    "\n",
+    "\n",
+    "calculate_math(sprendimas= 'sudejimas', num1=5, num2=7)\n",
+    "calculate_math(sprendimas= 'atimtis', num1=9, num2=2)\n",
+    "calculate_math(sprendimas= 'dalyba', num1=15, num2=5)\n",
+    "calculate_math(sprendimas= 'daugyba', num1=8, num2=7)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -233,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n"
    ]
   }
  ],
@@ -253,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
