Pirmu dvieju sav. uzduociu koregavimas

--- a/01_programming_basics/0104lt_matematiniai_operatoriai.ipynb
+++ b/01_programming_basics/0104lt_matematiniai_operatoriai.ipynb
@@ -71,10 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = (2 + 9 + 6 + 3 + 7)\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "number1 = 7\n",
+    "number2 = 6\n",
+    "number3 = 2\n",
+    "rezultatas = (number1 + number2 + number3 + 5)\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = 9 - 5 - 1 - 2\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "number11 = 25\n",
+    "number12 = 58\n",
+    "number13 = 13\n",
+    "rezultatas = (number12 - number11 - number13)\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaiciai = 5 * 6 * 8 * 3 * 1\n",
+    "print(skaiciai)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +313,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2500\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 25 * 10 * 10\n",
+    "print(age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,10 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(25/5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,10 +479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8333333333333335\n"
+     ]
+    }
+   ],
+   "source": [
+    "number5 = 138\n",
+    "number6 = 6\n",
+    "rezultatas = number5 / number6\n",
+    "print(rezultatas / 6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,10 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(100//3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -458,10 +563,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = 100 % 7\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,10 +637,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4913\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = 17 ** 3\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -580,10 +707,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "saknis = 25 ** 0.5\n",
+    "print(saknis)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -675,10 +813,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.2 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "walk1 = 1\n",
+    "rezultatas1 = 5\n",
+    "drive = 1\n",
+    "rezultatas2 = 30\n",
+    "walk2 = 0.5\n",
+    "rezultatas3 = 3\n",
+    "vidutinis_greitis = (rezultatas1 + rezultatas2 + rezultatas3) / (walk1 + drive + walk2)\n",
+    "print(vidutinis_greitis, 'km/h')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -689,10 +844,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(38/2.5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -739,10 +904,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1360.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = ((2*9)+(10*5)) / (20/(2+2)) * 100\n",
+    "print(rezultatas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -815,10 +991,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 25\n",
+    "x -= 5\n",
+    "x *= 3\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
