--- a/03_functions/0302lt_argumentai_grazinama_reiksme_return.ipynb
+++ b/03_functions/0302lt_argumentai_grazinama_reiksme_return.ipynb
@@ -330,14 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "Faktorialas 0: 1\n",
       "Faktorialas 1: 1\n",
       "Faktorialas 2: 1\n",
@@ -356,12 +355,11 @@
     "    else:\n",
     "        faktorial = 1\n",
     "\n",
-    "        for skaicius in range(1, n + 1):    \n",
-    "          faktorial *= skaicius \n",
+    "        for i in range(1, n + 1):    \n",
+    "          faktorial *= i \n",
     "          return faktorial  \n",
     "        \n",
-    "rezultatas = apskaiciuoti_faktoriala(0)\n",
-    "print(rezultatas)   \n",
+    "  \n",
     "\n",
     "# Iškvieskite funkciją ir spausdinkite faktorialus\n",
     "print(\"Faktorialas 0:\", apskaiciuoti_faktoriala(0))  # Tikimasi rezultatas: 1\n",
