--- a/03_functions/0303en_answers.ipynb
+++ b/03_functions/0303en_answers.ipynb
@@ -95,9 +95,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information Card:\n",
+      "Name: Alice\n",
+      "Age: 28\n",
+      "City: London\n",
+      "Country: UK\n",
+      "Information Card:\n",
+      "Name: Bob\n",
+      "Age: 35\n",
+      "City: Unknown\n",
+      "Country: Unknown\n",
+      "Information Card:\n",
+      "Name: Eve\n",
+      "Age: 25\n",
+      "City: Unknown\n",
+      "Country: Canada\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_info_card(name, age=25, city=\"Unknown\", country=\"Unknown\"):\n",
     "    info_card = f\"Information Card:\\nName: {name}\\nAge: {age}\\nCity: {city}\\nCountry: {country}\"\n",
