--- a/03_functions/0303lt_nebutini_argumentai.ipynb
+++ b/03_functions/0303lt_nebutini_argumentai.ipynb
@@ -313,11 +313,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zmogaus duomenys \n",
+      " Vardas:Alice, \n",
+      " amzius:28,\n",
+      "  miestas:London,\n",
+      " salis:UK\n",
+      "Zmogaus duomenys \n",
+      " Vardas:Jony, \n",
+      " amzius:33,\n",
+      "  miestas:-,\n",
+      " salis:-\n",
+      "Zmogaus duomenys \n",
+      " Vardas:Ben, \n",
+      " amzius:45,\n",
+      "  miestas:Howick,\n",
+      " salis:Skotland\n",
+      "Zmogaus duomenys \n",
+      " Vardas:Ana, \n",
+      " amzius:-,\n",
+      "  miestas:-,\n",
+      " salis:England\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta\n"
+    "# jusu kodo vieta\n",
+    "def asmens_informacine_kortele(vardas='', amzius='', miestas='', salis=''):\n",
+    "     zmogaus_duomenys = (f'Zmogaus duomenys \\n Vardas:{vardas}, \\n amzius:{amzius},\\n  miestas:{miestas},\\n salis:{salis}')\n",
+    "     print(zmogaus_duomenys)\n",
+    "\n",
+    "asmens_informacine_kortele('Alice', 28, 'London', 'UK')\n",
+    "asmens_informacine_kortele('Jony', 33, '-', '-')\n",
+    "asmens_informacine_kortele('Ben', 45, 'Howick', 'Skotland')\n",
+    "asmens_informacine_kortele('Ana', '-', '-', 'England')"
    ]
   }
  ],
@@ -337,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
