--- a/03_functions/0304lt_neriboti_argumentai_args_kwargs.ipynb
+++ b/03_functions/0304lt_neriboti_argumentai_args_kwargs.ipynb
@@ -16,9 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "Labas\n",
+      "Pasauli\n"
+     ]
+    }
+   ],
    "source": [
     "def spausdinti_args(*args):\n",
     "    for arg in args:\n",
@@ -36,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "def suma_reiksmiu(*args):\n",
     "    total = 0\n",
@@ -59,9 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labas Pasauli\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "def sujungti(*args):\n",
     "    sujungta = \"\"\n",
@@ -82,9 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "def didesni_uz(skaicius, *args):\n",
     "    didesni_elementai = []\n",
@@ -106,9 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7]\n",
+      "[3, 4, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "def eiluciu_ilgiai(*args):\n",
     "    ilgiai = []\n",
@@ -132,11 +180,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bendra vaisiu kaina 18.78\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def suskaiciuok_eilute(*args):\n",
+    "    total = sum(args) \n",
+    "    return total\n",
+    "\n",
+    "vaisiu_kainos = [3.99, 5.30, 2.50, 6.99]\n",
+    "total_price = suskaiciuok_eilute(*vaisiu_kainos)\n",
+    "\n",
+    "print(f'Bendra vaisiu kaina {total_price:.2f}')\n",
+    "\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Uzpirkimo kaina ligu 1593.99 €\n"
+     ]
+    }
+   ],
+   "source": [
+    "def skaiciuojam(*args):\n",
+    "    is_viso = sum(args)\n",
+    "    return is_viso\n",
+    "\n",
+    "baldu_kainos = [155.99, 550.00, 888.00]\n",
+    "is_viso = skaiciuojam(*baldu_kainos)\n",
+    "\n",
+    "print(f' Uzpirkimo kaina ligu {is_viso:.2f} €')"
    ]
   },
   {
@@ -154,9 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vardas: Jonas\n",
+      "amžius: 30\n",
+      "miestas: Londonas\n"
+     ]
+    }
+   ],
    "source": [
     "def spausdinti_viska(**kwargs):\n",
     "    for raktas, reiksme in kwargs.items():\n",
@@ -174,9 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pienukas: 2.00€\n",
+      "miltai: 1.00€\n",
+      "kiaušiniai: 3.00€\n",
+      "Iš viso: 6.00€\n"
+     ]
+    }
+   ],
    "source": [
     "def skaiciuoti(**products):\n",
     "    total = 0\n",
@@ -208,11 +319,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duomenys: \n",
+      " vardas: Jony; \n",
+      " el_pastas: jony@info.lt; \n",
+      " telefono_nr: 861212345. \n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def sukurti_info(vardas = '', el_pastas = '', telefono_nr = ''):\n",
+    "    print(f'Duomenys: \\n vardas: {vardas}; \\n el_pastas: {el_pastas}; \\n telefono_nr: {telefono_nr}. ')\n",
+    "\n",
+    "sukurti_info(vardas='Jony', el_pastas='jony@info.lt', telefono_nr=861212345)\n"
    ]
   },
   {
@@ -230,9 +356,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vardas: Jonas\n",
+      "Bruožai: linksmas, draugiškas, drąsus\n",
+      "miestas: Londonas\n",
+      "amžius: 30\n"
+     ]
+    }
+   ],
    "source": [
     "def asmens_info(vardas, *args, **kwargs):\n",
     "    print(f\"Vardas: {vardas}\")\n",
@@ -259,11 +396,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 1 \n",
+      " 2 \n",
+      " 3 \n",
+      " vardas:Jony\n",
+      "amzius: 25\n",
+      "miestas: Vilnius\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def asmens_info(vardas, *args, **kwargs):\n",
+    "    print(f'\\n 1 \\n 2 \\n 3 \\n vardas:{vardas}')\n",
+    "    for raktas, reiksme in kwargs.items():\n",
+    "        print(f'{raktas}: {reiksme}')\n",
+    "\n",
+    "asmens_info('Jony', 1,2,3, amzius=25, miestas='Vilnius')\n",
+    "\n"
    ]
   },
   {
@@ -294,11 +452,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 3, 5], [('age', '25')])\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "def filtruoti_argumentus(*args, **kwargs):\n",
+    "   teigiami_skaiciai = []\n",
+    "   for arg in args:\n",
+    "        if type(arg) == int:\n",
+    "            teigiami_skaiciai.append(arg)\n",
+    "\n",
+    "   filtras_kwargs = []\n",
+    "   for raktas, reiksme in kwargs.items():\n",
+    "        if raktas.startswith ('a') and type(reiksme) == str:\n",
+    "             filtras_kwargs.append((raktas, reiksme))\n",
+    "\n",
+    "        return teigiami_skaiciai, filtras_kwargs\n",
+    "\n",
+    "results = filtruoti_argumentus(1, 'Jonas', 3, 5, age='25', city='Vilnius', address='Kaunas')\n",
+    "\n",
+    "print(results)\n",
+    "\n",
+    "  \n",
+    "       \n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -325,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
