--- a/03_functions/0304en_answers.ipynb
+++ b/03_functions/0304en_answers.ipynb
@@ -130,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([1, 3, 5], {'age': '25', 'address': 'Kaunas'})\n"
+      "([1, 3, 5], [('age', '25'), ('address', 'Kaunas')])\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
