Uzduociu pateisymai 01-0304lt

--- a/01_programming_basics/0107lt_ivestis.ipynb
+++ b/01_programming_basics/0107lt_ivestis.ipynb
@@ -269,6 +269,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---paskaiciuokime!---\n",
+      " ka darysime toliau, isgaunam rezultata?\n",
+      "rezultatas 13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('---paskaiciuokime!---')\n",
+    "numeris1 = float(input('iveskyte prasom pirma skaiciu'))\n",
+    "numeris2 = float(input('iveskyte prasom antra skaiciu'))\n",
+    "print(' ka darysime toliau, isgaunam rezultata?')\n",
+    "sprendimas = input('sprendimas: +,-,*,/: ')\n",
+    "if sprendimas == '+':\n",
+    "    print('rezultatas',numeris1 + numeris2)\n",
+    "elif sprendimas == '*':\n",
+    "    print('rezultatas',numeris1 * numeris2)\n",
+    "elif sprendimas == '/':\n",
+    "    print('rezultatas', numeris1 / numeris2)\n",
+    "elif sprendimas == '-':\n",
+    "    print('rezultatas', numeris1 - numeris2)\n",
+    "else:\n",
+    "    print('nera sprendimo')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -287,6 +320,48 @@
     "\n",
     "Parašykite programa, kuri surenka vartotojo ivestį ir iš jos išveda rezultatą. Būkite kūrybingi!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---registracija---\n",
+      "duomenys ivesti:\n",
+      " vardas------ Jony \n",
+      "amzius------- 36 \n",
+      "uzsiemimas--- muzika\n",
+      "jusu registracija baigta\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"---registracija---\")\n",
+    "zingsnis1 = input('iveskyte prasom savo varda')\n",
+    "zingsnis2 = input('iveskyte prasom savo amziu')\n",
+    "zingsnis3 = input('jusu megstamas laisvalaikio uzsiemimas')\n",
+    "print('duomenys ivesti:\\n','vardas------', zingsnis1, '\\n'  'amzius-------', zingsnis2, '\\n'  'uzsiemimas---', zingsnis3)\n",
+    "slaptazodis = int(input('iveskyte sukurta slaptazodi, slaptozodis turi buti skaiciai'))\n",
+    "if slaptazodis / 2 >= 1 :\n",
+    "    print('jusu registracija baigta')\n",
+    "elif slaptazodis != 0:\n",
+    "    print('neteisingas slaptazodis')\n",
+    "else:\n",
+    "    print('registracija nepavyko')\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
