--- a/03_functions/0301lt_funkcijos_aprasymo_struktura.ipynb
+++ b/03_functions/0301lt_funkcijos_aprasymo_struktura.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sveiki, Jonas!\n",
+      "Sveiki, Studentas!\n"
+     ]
+    }
+   ],
    "source": [
     "def sveikinti(vardas):\n",
     "    \"\"\"Ši funkcija sveikina asmenį, perduotą kaip argumentą.\"\"\"\n",
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C: Patenkinamas\n"
+     ]
+    }
+   ],
    "source": [
     "# Pavyzdžio panaudojimas\n",
     "ivertinti_pazymi(75)"
