--- a/03_functions/0304lt_neriboti_argumentai_args_kwargs.ipynb
+++ b/03_functions/0304lt_neriboti_argumentai_args_kwargs.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,20 +465,20 @@
    ],
    "source": [
     "# jusu kodo vieta\n",
-    "def filtruoti_argumentus(*args, **kwargs):\n",
-    "   teigiami_skaiciai = []\n",
+    "def filter_arguments(*args, **kwargs):\n",
+    "   positional_numbers = []\n",
     "   for arg in args:\n",
     "        if type(arg) == int:\n",
-    "            teigiami_skaiciai.append(arg)\n",
+    "            positional_numbers.append(arg)\n",
     "\n",
-    "   filtras_kwargs = []\n",
-    "   for raktas, reiksme in kwargs.items():\n",
-    "        if raktas.startswith ('a') and type(reiksme) == str:\n",
-    "             filtras_kwargs.append((raktas, reiksme))\n",
+    "   filtras_kw = []\n",
+    "   for key, Value in kwargs.items():\n",
+    "        if key.startswith ('a') and type(Value) == str:\n",
+    "             filtras_kw.append((key, Value))\n",
     "\n",
-    "        return teigiami_skaiciai, filtras_kwargs\n",
+    "        return positional_numbers, filtras_kw\n",
     "\n",
-    "results = filtruoti_argumentus(1, 'Jonas', 3, 5, age='25', city='Vilnius', address='Kaunas')\n",
+    "results = filter_arguments(1, 'Jonas', 3, 5, age='25', city='Vilnius', address='Kaunas')\n",
     "\n",
     "print(results)\n",
     "\n",
