--- a/01_programming_basics/0105lt_salygos_operatoriai.ipynb
+++ b/01_programming_basics/0105lt_salygos_operatoriai.ipynb
@@ -1777,6 +1777,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ne keliamieji\n"
+     ]
+    }
+   ],
+   "source": [
+    "metai = 2004\n",
+    "if metai % 4 == 0:\n",
+    "    if metai % 100 != 0: \n",
+    "        if metai % 400 == 0:\n",
+    "            print('metai yra keliamieji')\n",
+    "        else:\n",
+    "            print('ne keliamieji')\n",
+    "    else:\n",
+    "        print('keliamieji')\n",
+    "else:\n",
+    "    print('ne keliamieji')        \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
