--- a/03_functions/0306lt_anonimines_funkcijos.ipynb
+++ b/03_functions/0306lt_anonimines_funkcijos.ipynb
@@ -76,11 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "numbers = list(map(lambda x: x**3, [1,2,3,4,5,6,7,8,9,10]))\n",
+    "cube = numbers\n",
+    "print(cube)"
    ]
   },
   {
@@ -94,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['beer', 'bread', 'sugar', 'yogurt', 'mushroom']\n"
+     ]
+    }
+   ],
    "source": [
     "zodziai = ['beer', 'mushroom', 'bread', 'sugar', 'yogurt'] \n",
     "rusiuoti_zodziai = sorted(zodziai, key=lambda x: len(x)) \n",
@@ -124,11 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['breakfast', 'forest', 'flower', 'bear', 'star']\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "words = ['bear', 'forest', 'flower', 'star', 'breakfast']\n",
+    "sorted_words = sorted(words, key=lambda words: -len(words)) \n",
+    "print(sorted_words)"
    ]
   },
   {
@@ -179,11 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['forest', 'flowers']\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "words = ['forest', 'bike', 'home', 'flowers', 'stars']\n",
+    "long_words = list(filter (lambda words: len(words)>5, words))\n",
+    "print(long_words)"
    ]
   },
   {
@@ -216,7 +257,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "words = ['winter', 'car', 'phone', 'umbrella', 'cupcakes', 'language', 'coffee']\n",
+    "uppercase_words = list(map(lambda words: words.upper(), words ))\n",
+    "sorted_words_desc = "
    ]
   }
  ],
@@ -236,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
