Atnaujinta uzduotis 0306lt

--- a/03_functions/0306lt_anonimines_funkcijos.ipynb
+++ b/03_functions/0306lt_anonimines_funkcijos.ipynb
@@ -253,14 +253,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "words ['winter', 'car', 'phone', 'umbrella', 'cupcakes', 'language', 'coffee']\n",
+      "uppercase_words ['WINTER', 'CAR', 'PHONE', 'UMBRELLA', 'CUPCAKES', 'LANGUAGE', 'COFFEE']\n",
+      "sorted_words_desc ['umbrella', 'cupcakes', 'language', 'winter', 'coffee', 'phone', 'car']\n",
+      "long_words ['winter', 'umbrella', 'cupcakes', 'language', 'coffee']\n"
+     ]
+    }
+   ],
    "source": [
     "# jusu kodo vieta\n",
     "words = ['winter', 'car', 'phone', 'umbrella', 'cupcakes', 'language', 'coffee']\n",
     "uppercase_words = list(map(lambda words: words.upper(), words ))\n",
-    "sorted_words_desc = "
+    "sorted_words_desc = sorted(words, key=lambda words: -len(words))\n",
+    "long_words = list(filter(lambda words: len(words)>5, words))\n",
+    "print('words', words)\n",
+    "print('uppercase_words', uppercase_words)\n",
+    "print('sorted_words_desc', sorted_words_desc)\n",
+    "print('long_words', long_words)\n"
    ]
   }
  ],
